# mplotter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  demo.py  pyproject.toml  setup.cfg
doc/: conf.py  index.rst  readme.rst  reference.rst
doc/extensions/: custom_roles.py
doc/static/: custom.css
doc/templates/autosummary/: base.rst  class.rst  module.rst
src/: license_header.txt
src/mplotter/: __init__.py  annotating.py  coloring.py  grids.py  saving.py  sizing.py  styling.py
styles/: fontsize.mplstyle  foreground.mplstyle  latexproj.mplstyle  linewidth.mplstyle  physrev.mplstyle  properties.mplstyle  quanthep.mplstyle  rgbmrc.mplstyle  slideshow.mplstyle
