[metadata]
name = mplotter
version = attr: mplotter.__version__
author = Marco Rigobello
description = Plotting helpers and styles for matplotlib & TeX projects.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/rgbmrc/mplotter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Matplotlib

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    yapf
    pre-commit
pdf = pikepdf
raster = pillow
